[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Inimigo/Inimigo.gd" type="Script" id=1]
[ext_resource path="res://Assets/Movimento_aletorio.tscn" type="PackedScene" id=2]
[ext_resource path="res://Engine/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Aim.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1451.95, 133.409 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.5748, 28.965 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.1436, 27.8274 )

[sub_resource type="CircleShape2D" id=4]
radius = 250.0

[node name="Inimigo" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 50
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.960928, 0.989137 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( -0.0197921, 0.218094 )
shape = SubResource( 1 )

[node name="Movimento_aletorio" parent="." instance=ExtResource( 2 )]

[node name="Timer" parent="Movimento_aletorio" index="0"]
wait_time = 2.0

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
MaxHealth = 3

[node name="StunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[node name="Alcance" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alcance"]
shape = SubResource( 4 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]

[editable path="Movimento_aletorio"]
